# anime

./: .gitignore
.devcontainer/: devcontainer.json  postCreateCommand.sh
paper/: COVER_LETTER.qmd  README.qmd  case_study.qmd  refs.bib
py/: Cargo.toml  demo.py  justfile  pyproject.toml
py/src/: anime_compat.rs  lib.rs
r/: .gitignore  README.qmd
r/src/rust/: Cargo.toml
rust/src/: lib.rs  overlap.rs
